kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-cicd-helloworld-service
spec:
  selector:
    app: homelab-cicd-helloworld
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http-port
