kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-cicd-helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cicd-helloworld.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelab-cicd-helloworld-service
            port: 
              number: 8080
